syntax = "proto2";

package pbtest;

import "person/person.proto";

option java_multiple_files = true;
option java_package = "pbtest";
option java_outer_classname = "AddressBookProtos";

message AddressBook {
  repeated person.Person people = 1;
}