syntax = "proto2";

package pbtest.person;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "pbtest.person";
option java_outer_classname = "PersonProtos";

message Person {
  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;
  optional google.protobuf.Timestamp dob = 5;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phones = 4;
}
